[gd_scene load_steps=16 format=2]

[ext_resource path="res://status/traitors-status/wall-panel.png" type="Texture" id=1]
[ext_resource path="res://status/traitors-status/traitor-person.png" type="Texture" id=2]
[ext_resource path="res://status/traitors-status/table.png" type="Texture" id=3]
[ext_resource path="res://status/traitors-status/shadow.png" type="Texture" id=4]
[ext_resource path="res://status/traitors-status/chalkboard.png" type="Texture" id=5]
[ext_resource path="res://status/traitors-status/Chalkboard.gd" type="Script" id=6]
[ext_resource path="res://status/traitors-status/traitors-status.gd" type="Script" id=7]
[ext_resource path="res://status/traitors-status/dialog.png" type="Texture" id=8]
[ext_resource path="res://status/traitors-status/traitor-music.wav" type="AudioStream" id=9]
[ext_resource path="res://fonts/pixel-font.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://fonts/chalk-font.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://status/traitors-status/dialog-box.gd" type="Script" id=12]
[ext_resource path="res://status/traitors-status/gasp.mp3" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 52
extra_spacing_top = 14
font_data = ExtResource( 10 )

[node name="TraitorsStatus" type="Node2D"]
script = ExtResource( 7 )

[node name="Wall" type="Sprite" parent="."]
modulate = Color( 0.623529, 0.509804, 0.533333, 1 )
position = Vector2( 512.544, 240.423 )
scale = Vector2( 1.08754, 0.845894 )
texture = ExtResource( 1 )

[node name="Person" type="Sprite" parent="."]
position = Vector2( 504, 368 )
scale = Vector2( 0.689349, 0.689349 )
texture = ExtResource( 2 )

[node name="Table" type="Sprite" parent="."]
position = Vector2( 512, 480 )
scale = Vector2( 0.439268, 0.109966 )
texture = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.678431 )
position = Vector2( 511.5, 559.5 )
scale = Vector2( 21.14, 2.26 )
texture = ExtResource( 4 )

[node name="Chalkboard" type="Sprite" parent="."]
visible = false
position = Vector2( 440, 384 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Control" type="Control" parent="Chalkboard"]
margin_right = 40.0
margin_bottom = 40.0

[node name="StatusText" type="Label" parent="Chalkboard/Control"]
margin_left = -160.0
margin_top = -133.0
margin_right = 181.0
margin_bottom = 134.0
custom_colors/font_color = Color( 1, 1, 1, 0.803922 )
custom_fonts/font = SubResource( 2 )
text = "200"
align = 1
valign = 1

[node name="DialogBox" type="Sprite" parent="."]
position = Vector2( 512, 505 )
scale = Vector2( 0.49922, 0.299383 )
texture = ExtResource( 8 )
script = ExtResource( 12 )

[node name="CharacterTimer" type="Timer" parent="DialogBox"]
wait_time = 0.05

[node name="CompleteTimer" type="Timer" parent="DialogBox"]
wait_time = 3.0

[node name="Control" type="Control" parent="DialogBox"]
margin_left = -609.0
margin_top = -271.0
margin_right = 609.0
margin_bottom = 291.0

[node name="DialogText" type="Label" parent="DialogBox/Control"]
margin_right = 1218.0
margin_bottom = 562.0
custom_fonts/font = SubResource( 3 )
text = "Listen, this person knows I think the world of them.  I have to go with my gut. I hope this person is not a faithful. Tonight, I voted for..."
autowrap = true

[node name="TraitorMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Gasp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[connection signal="complete" from="Chalkboard" to="." method="_onChalkboardComplete"]
[connection signal="complete" from="DialogBox" to="." method="_onDialogBoxComplete"]
[connection signal="timeout" from="DialogBox/CharacterTimer" to="DialogBox" method="_onCharacterTimeout"]
[connection signal="timeout" from="DialogBox/CompleteTimer" to="DialogBox" method="_onCompleteTimeout"]
